--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -672,7 +672,7 @@
     <!-- Shop travel label -->
     <string name="shop_travel">Buscar viajes</string>
     <!-- Top deals tonight -->
-    <string name="nearby_deals_title">Hoteles más populares para esta noche</string>
+    <string name="nearby_deals_title">Los más populares para hoy</string>
     <!-- See all nearby deals -->
     <string name="nearby_deals_expand">Ver más</string>
     <!-- Percent off template, e.g. 50% off -->
