--- a/project/src/travelocity/res/values-fr-rCA/strings.xml
+++ b/project/src/travelocity/res/values-fr-rCA/strings.xml
@@ -96,5 +96,6 @@
     <string name="login_reset_password">Vous devez créer un nouveau code d\&apos;ouverture de session international vous donnant accès à tous les sites d\&apos;Travelocity.\nVeuillez réinitialiser votre mot de passe à l\&apos;aide du lien « Oublié votre mot de passe? » ci-dessous.</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
     <string name="total_due_today">Payable aujourd\&apos;hui à Travelocity</string>
+    <string name="etp_pay_now_charges_text">Travelocity traitera les détails de vos paiements.</string>
 
 </resources>
