--- a/project/src/travelocity/res/values-fr/strings.xml
+++ b/project/src/travelocity/res/values-fr/strings.xml
@@ -102,5 +102,6 @@
     <string name="login_reset_password">Vous devez créer une nouvelle connexion internationale pour tous les sites Travelocity.\nVeuillez réinitialiser votre mot de passe en utilisant le lien « Mot de passe oublié ? » situé ci-dessous.</string>
     <!-- Label to show user in cost breakdown for the total being charged to them right now -->
     <string name="total_due_today">Dû à Travelocity aujourd\&apos;hui</string>
+    <string name="etp_pay_now_charges_text">Travelocity traitera vos détails de paiement.</string>
 
 </resources>
