--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -239,9 +239,9 @@
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
-    <string name="search_widget_heading">Search For Things To Do</string>
+    <string name="lx_search_widget_heading">Dates &amp; Location</string>
     <!-- Search widget location hint -->
-    <string name="search_location_hint">Enter location</string>
+    <string name="lx_search_location_hint">Enter location</string>
     <!-- Error messge for missing Location in LX search form -->
     <string name="lx_error_missing_location">Location missing</string>
     <!-- Error messge for missing start date in LX search form -->
