--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -237,9 +237,9 @@
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
     <!-- Search widget header text -->
-    <string name="search_widget_heading">Buscar actividades</string>
+    <string name="lx_search_widget_heading">Buscar actividades</string>
     <!-- Search widget location hint -->
-    <string name="search_location_hint">Ingresar ubicación</string>
+    <string name="lx_search_location_hint">Ingresar ubicación</string>
     <!-- Error messge for missing Location in LX search form -->
     <string name="lx_error_missing_location">Falta consignar ubicación</string>
     <!-- Error messge for missing start date in LX search form -->
