--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -216,6 +216,8 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
+    <!-- Search widget location hint -->
+    <string name="lx_search_location_hint">Enter location</string>
     <!-- Search widget header text -->
     <string name="lx_search_widget_heading">Dates &amp; Location</string>
     <!-- Button to show calendar and selected dates -->
@@ -349,6 +351,8 @@
     <string name="lx_enter_contact_details">Enter contact details</string>
     <!-- LX search error -->
     <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string> 
+    <!-- LX search error -->
+    <string name="error_lx_current_location_search_message">Current location search returned no results. Please retry your search with different criteria.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Error</string>
     <!-- Text for error toolbar-->
