--- a/project/src/voyages/res/values-fr/strings.xml
+++ b/project/src/voyages/res/values-fr/strings.xml
@@ -218,5 +218,6 @@
     <string name="dialog_message_launch_vsc_mobile_site">Ouvrir le site mobile de L’Agence Voyages-sncf.com ?</string>
     <!-- The hotel booking succeeded, but there were some errors. Likely an email was not sent -->
     <string name="e3_error_checkout_booking_succeeded_with_errors_vsc">Votre hôtel a bien été réservé ! Veuillez contacter le service clients de L’Agence Voyages-sncf.com si vous avez besoin d\&apos;un voyage immédiatement.</string>
+    <string name="total_due_to_our_brand_today">Dû à L’Agence Voyages-sncf aujourd\&apos;hui:</string>
 
 </resources>
