--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -386,6 +386,10 @@
     <string name="lx_price_sort_button">Price</string>
     <!-- Popularity sort button -->
     <string name="lx_popularity_sort_button">Popularity</string>
+    <!-- Select ticket button -->
+    <string name="lx_select_ticket">Select Tickets</string>
+    <!-- Free cancellation text in offer  -->
+    <string name="lx_free_cancellation">Free Cancellation</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
